Testing the application end-to-end with outbox pattern changes